Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51254

Material: SpinBox doesn't respect the minimum touch target size

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.7.0 RC
    • 5.6.0 Beta
    • Quick: Controls 2
    • None
    • 0fac79414ef44ff944ff45b8cc0a3c19fcce88c5

    Description

      It seems QQC2 doesn't uses the fonts sizes extracted from Android, therefore they are smaller on hiDPI devices (e.g. Nexus 10).

      The Material SpinBox buttons are smaller than 48dp x 48dp, which is specified as the minimum touch target size: https://www.google.com/design/spec/layout/metrics-keylines.html#metrics-keylines-touch-target-size

      Attachments

        1. device-2016-02-19-135109.png
          43 kB
          BogDan Vatra
        2. device-2016-02-19-131052.png
          25 kB
          BogDan Vatra
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            krnekit Nikita Krupenko
            taipan BogDan Vatra
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes