Material: increase size and paddings for SpinBox

Task-number: QTBUG-51254
Change-Id: I2844d9cbe03e7fdda88e358b2f01586ca48f180c
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>